[gd_scene load_steps=5 format=3 uid="uid://b4wtnwp8xmd8b"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_3d0qm"]
[ext_resource type="PackedScene" uid="uid://b31gvcak6ixcf" path="res://enemy_model.tscn" id="2_fnind"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u8jsf"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p1p1h"]
height = 2.0034

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 9
collision_mask = 9
script = ExtResource("1_3d0qm")

[node name="dummyModel2" parent="." instance=ExtResource("2_fnind")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.999773, 0)
shape = SubResource("CylinderShape3D_u8jsf")

[node name="health_label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
billboard = 1
text = "health"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_p1p1h")

[node name="mind_state" type="Node3D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
